// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parser should postprocess elements allow modify element metadata 1`] = `
{
  "aria": {
    "implicitRole": [Function],
    "naming": [Function],
  },
  "attributes": {
    "accesskey": {
      "enum": [
        {
          "name": "/./u",
          "pattern": /\\./u,
        },
      ],
      "list": true,
    },
    "align": {
      "deprecated": true,
    },
    "aria-activedescendant": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "reference": "id",
    },
    "aria-controls": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "list": true,
      "reference": "id",
    },
    "aria-describedby": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "list": true,
      "reference": "id",
    },
    "aria-details": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "reference": "id",
    },
    "aria-errormessage": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "reference": "id",
    },
    "aria-flowto": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "list": true,
      "reference": "id",
    },
    "aria-labelledby": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "list": true,
      "reference": "id",
    },
    "aria-owns": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "list": true,
      "reference": "id",
    },
    "autocapitalize": {
      "enum": [
        "off",
        "none",
        "on",
        "sentences",
        "words",
        "characters",
      ],
    },
    "autocorrect": {
      "enum": [
        "on",
        "off",
      ],
      "omit": true,
    },
    "autofocus": {
      "boolean": true,
    },
    "class": {},
    "contenteditable": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "contextmenu": {
      "deprecated": true,
    },
    "datafld": {
      "deprecated": true,
    },
    "dataformatas": {
      "deprecated": true,
    },
    "datasrc": {
      "deprecated": true,
    },
    "dir": {
      "enum": [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": {
      "enum": [
        "true",
        "false",
      ],
    },
    "enterkeyhint": {
      "enum": [
        "enter",
        "done",
        "go",
        "next",
        "previous",
        "search",
        "send",
      ],
    },
    "exportparts": {},
    "headingoffset": {
      "enum": [
        {
          "name": "/^[0-8]$/",
          "pattern": /\\^\\[0-8\\]\\$/,
        },
      ],
    },
    "headingreset": {
      "boolean": true,
    },
    "hidden": {
      "enum": [
        "hidden",
        "until-found",
      ],
      "omit": true,
    },
    "id": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
    },
    "inert": {
      "boolean": true,
    },
    "inputmode": {
      "enum": [
        "none",
        "text",
        "decimal",
        "numeric",
        "tel",
        "search",
        "email",
        "url",
      ],
    },
    "is": {},
    "itemid": {},
    "itemprop": {},
    "itemref": {},
    "itemscope": {
      "boolean": true,
    },
    "itemtype": {},
    "lang": {},
    "nonce": {},
    "part": {},
    "popover": {
      "enum": [
        "auto",
        "hint",
        "manual",
      ],
      "omit": true,
    },
    "role": {},
    "slot": {},
    "spellcheck": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "style": {},
    "tabindex": {
      "enum": [
        {
          "name": "/^-?\\d+$/",
          "pattern": /\\^-\\?\\\\d\\+\\$/,
        },
      ],
    },
    "title": {},
    "translate": {
      "enum": [
        "yes",
        "no",
      ],
      "omit": true,
    },
    "writingsuggestions": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "xmlns": {
      "enum": [
        {
          "name": "/^.+$/",
          "pattern": /\\^\\.\\+\\$/,
        },
      ],
    },
  },
  "flow": true,
  "focusable": false,
  "implicitRole": [Function],
  "patternAttributes": [
    {
      "pattern": "aria-*",
      "regexp": /\\^\\\\x61ria\\\\x2d\\.\\+\\$/i,
    },
    {
      "pattern": "data-*",
      "regexp": /\\^\\\\x64ata\\\\x2d\\.\\+\\$/i,
    },
    {
      "pattern": "on*",
      "regexp": /\\^\\\\x6fn\\.\\+\\$/i,
    },
    {
      "pattern": "xml:*",
      "regexp": /\\^\\\\x78ml\\\\x3a\\.\\+\\$/i,
    },
    {
      "enum": [
        "/.+/",
      ],
      "pattern": "xmlns:*",
      "regexp": /\\^\\\\x78mlns\\\\x3a\\.\\+\\$/i,
    },
  ],
  "permittedContent": [
    "@flow",
    "dt",
    "dd",
  ],
  "tagName": "i",
  "templateRoot": false,
}
`;

exports[`parser should postprocess elements allow modify element metadata 2`] = `
{
  "aria": {
    "implicitRole": [Function],
    "naming": [Function],
  },
  "attributes": {
    "accesskey": {
      "enum": [
        {
          "name": "/./u",
          "pattern": /\\./u,
        },
      ],
      "list": true,
    },
    "aria-activedescendant": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "reference": "id",
    },
    "aria-controls": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "list": true,
      "reference": "id",
    },
    "aria-describedby": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "list": true,
      "reference": "id",
    },
    "aria-details": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "reference": "id",
    },
    "aria-errormessage": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "reference": "id",
    },
    "aria-flowto": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "list": true,
      "reference": "id",
    },
    "aria-labelledby": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "list": true,
      "reference": "id",
    },
    "aria-owns": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
      "list": true,
      "reference": "id",
    },
    "autocapitalize": {
      "enum": [
        "off",
        "none",
        "on",
        "sentences",
        "words",
        "characters",
      ],
    },
    "autocorrect": {
      "enum": [
        "on",
        "off",
      ],
      "omit": true,
    },
    "autofocus": {
      "boolean": true,
    },
    "class": {},
    "contenteditable": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "contextmenu": {
      "deprecated": true,
    },
    "dir": {
      "enum": [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": {
      "enum": [
        "true",
        "false",
      ],
    },
    "enterkeyhint": {
      "enum": [
        "enter",
        "done",
        "go",
        "next",
        "previous",
        "search",
        "send",
      ],
    },
    "exportparts": {},
    "headingoffset": {
      "enum": [
        {
          "name": "/^[0-8]$/",
          "pattern": /\\^\\[0-8\\]\\$/,
        },
      ],
    },
    "headingreset": {
      "boolean": true,
    },
    "hidden": {
      "enum": [
        "hidden",
        "until-found",
      ],
      "omit": true,
    },
    "id": {
      "enum": [
        {
          "name": "/^\\S+$/",
          "pattern": /\\^\\\\S\\+\\$/,
        },
      ],
    },
    "inert": {
      "boolean": true,
    },
    "inputmode": {
      "enum": [
        "none",
        "text",
        "decimal",
        "numeric",
        "tel",
        "search",
        "email",
        "url",
      ],
    },
    "is": {},
    "itemid": {},
    "itemprop": {},
    "itemref": {},
    "itemscope": {
      "boolean": true,
    },
    "itemtype": {},
    "lang": {},
    "nonce": {},
    "part": {},
    "popover": {
      "enum": [
        "auto",
        "hint",
        "manual",
      ],
      "omit": true,
    },
    "role": {},
    "slot": {},
    "spellcheck": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "style": {},
    "tabindex": {
      "enum": [
        {
          "name": "/^-?\\d+$/",
          "pattern": /\\^-\\?\\\\d\\+\\$/,
        },
      ],
    },
    "title": {},
    "translate": {
      "enum": [
        "yes",
        "no",
      ],
      "omit": true,
    },
    "writingsuggestions": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "xmlns": {
      "enum": [
        {
          "name": "/^.+$/",
          "pattern": /\\^\\.\\+\\$/,
        },
      ],
    },
  },
  "flow": true,
  "focusable": false,
  "implicitRole": [Function],
  "patternAttributes": [
    {
      "pattern": "aria-*",
      "regexp": /\\^\\\\x61ria\\\\x2d\\.\\+\\$/i,
    },
    {
      "pattern": "data-*",
      "regexp": /\\^\\\\x64ata\\\\x2d\\.\\+\\$/i,
    },
    {
      "pattern": "on*",
      "regexp": /\\^\\\\x6fn\\.\\+\\$/i,
    },
    {
      "pattern": "xml:*",
      "regexp": /\\^\\\\x78ml\\\\x3a\\.\\+\\$/i,
    },
    {
      "enum": [
        "/.+/",
      ],
      "pattern": "xmlns:*",
      "regexp": /\\^\\\\x78mlns\\\\x3a\\.\\+\\$/i,
    },
  ],
  "permittedContent": [
    "@phrasing",
  ],
  "phrasing": true,
  "tagName": "u",
  "templateRoot": false,
}
`;
